@@ -1,3 +1,13 @@
+Sat Dec 25 10:23:30 2004  Peter Naulls  <peter@chocky.org>
+
+	* source/clib/libgen.h, source/misc/dirname.c,
+	  source/stdlib/xpg_basename.c, source/string/memrchr.c,
+	  source/string/rawmemchr.c, source/clib/string.h:
+	  Add libgen.h functionality (dirname, basename) and related
+	  changes in support of these functions.
+	* source/stdio/printf.c: libscl compatibility - this is a temporary
+	  workaround for libscl varargs.
+
 Thu Dec 23 20:51:31 2004  Peter Naulls  <peter@chocky.org>
 
 	* source/sound/dsp.c, source/clib/swis.h, source/clib/unixlib/dev.h,
